public/css/bulma.extension.css
/*HTML Fix to lock footer on bottom*/
html {
  touch-action: manipulation;
  height: 100%;
}
/*Body Fix to lock footer on bottom*/
body {
  min-height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}
/*Footer on bottom and its style*/
#footer{
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  padding: 0;
  background-color: transparent;
}
#footer div{
  padding: 1.2rem;
  background-color: #e8e8e8;
  /*font-size: 0.75rem;*/
}

#showOrders{
  color: white;
}

#showOrders:hover{
  background-color: transparent;
}

#installPWA{
  position: fixed;
  bottom: 1rem;
  display: none;
  right: 1rem;
  background: linear-gradient(to right, #2f8b13, #3fcd52);
  z-index: 1;
  color: white;
  height: auto;
  font-weight: bold;
}

#floatingMessage {
  z-index: 100;
  display: none;
  justify-content: center;
  text-align: center;
  align-items: center;
  font-size: 1.5rem;
  width: 30vw;
  min-height: 100px;
  border-radius: 0.7rem;
  position: fixed;
  bottom: 4vw;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  background-color: #363636;
  color: #fff;
}

.darkModeBtn{
  background-color: white;
}
/*An under class of class="box" to create receipt*/
.is-receipt {
  min-width: 320px;
  max-width: 100vw;
  margin-top: 0.75rem;
}
/*Correct dimension of icon inside input etc.*/
.is-icon{
  height: 1rem;
}
/*Apply curved style everywhere*/
.button, .button.is-small, .box, .input, select {
  border-radius: 0.7rem;
}
 .navbar-dropdown, .navbar-menu {
  border-bottom-left-radius: 0.7rem;
  border-bottom-right-radius: 0.7rem;
}
/*Correction of Bulma CSS default color*/
.navbar-burger:hover {
  background-color: transparent;
}
.box {
  box-shadow: 0pt 3pt 15pt -2pt grey;
}
/*Make the navbar bigger only when it haven't hamburger*/
@media screen and (min-width: 1024px) {
  .navbar {
      min-height: 4.30rem;
  }
}
/*Make the navMenu of hamburger absolute*/
@media screen and (max-width: 1023px) {
  #navMenu{
    position: absolute;
    width: 100%;
  }
  #showOrders{
    color: #4a4a4a;
  }
}

@media only screen and (min-width: 1024px) {
  #floatingMessage {
    bottom: 8vw;
    width: 70vw;
  }
}
/*--------DARK MODE--------*/
.logoImg{
  background-color: #5b5b5b;
  border-radius: 0.2rem;
  padding: 0.2rem;
  box-sizing: content-box;
}
.darkMode{
  color: white !important;
  background: rgb(27 25 35) !important;
}
.darkModeLayer1{
  background: rgb(42 41 51) !important;
  color: white !important;
}
.darkModeLayer2{
  background: #464646 !important;
  color: white !important;
}
.thHighlight{
  color: #f14668 !important;
}
.whiteMode {
  color: #222222 !important;
  background-color: white !important;
}
.invert{
  filter: invert(1);
}
/*Make the page not selectable by users*/
* {
  user-select: none;
  outline: 0;
  -webkit-tap-highlight-color: transparent;
}
/*Make a "Scroll To Top" button*/
#scrollToTopButton {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 1rem; /* Place the button at the bottom of the page */
  right: 1rem; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
}
/* Scrollbar personalizzata */
::-webkit-scrollbar {
  width: 5px;
}
::-webkit-scrollbar-track {
  background: #cdcdcd;
  border-radius: 3px;
  overflow: hidden;
}
::-webkit-scrollbar-thumb {
  background: rgb(116 116 116);
  border-radius: 3px;
  overflow: hidden;
}
::-webkit-scrollbar-thumb:hover {
  opacity: 0.6;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

